# sentinel

./: .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Justfile  README.md  TODO.md  biome.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-dev.yml  deploy-production.yml
.wrangler/cache/: pages.json  wrangler-account.json
dapps/: package-lock.json  package.json
dapps/src/: ActivityFeed.tsx  App.tsx  BountyBoard.tsx  BountyCard.tsx  MostWanted.tsx  PostBountyForm.tsx  index.css  main.css  main.tsx
docs/superpowers/specs/: 2026-03-31-deepsurge-page-design.md  2026-04-01-wasmcloud-migration-design.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  BountyBoard.tsx  InlineCard.tsx  LoadingState.tsx  PostBountyForm.tsx  SentinelDashboard.tsx  SentinelFeed.tsx  StatsBar.tsx  ThreatCard.tsx  ThreatLeaderboard.tsx  Tooltip.tsx  WalletContext.tsx  index.css  index.tsx  types.ts
frontend/src/__tests__/: SentinelFeed.test.tsx  StatsBar.test.tsx  ThreatCard.test.tsx  ThreatLeaderboard.test.tsx  types.test.ts
frontend/src/tests/: SentinelFeed.test.tsx  StatsBar.test.tsx  ThreatCard.test.tsx  ThreatLeaderboard.test.tsx  types.test.ts
frontend/src/views/: FeedView.tsx  KillsView.tsx  PilotsView.tsx  SystemsView.tsx  TrackedView.tsx
infrastructure/: Pulumi.yaml  index.ts  package.json  sst.config.ts  tsconfig.json  vitest.config.ts
infrastructure/sdks/neon/: package.json  utilities.ts
infrastructure/src/: backend.ts  config.test.ts  config.ts  database.ts  frontend.ts  helpers.test.ts  helpers.ts  index.ts  infrastructure.test.ts  network.ts  observability.ts  test-setup.ts
infrastructure/src/__mocks__/: neon.ts
move-contracts/bounty_board/: Move.toml  Published.toml
move-contracts/bounty_board/sources/: bounty_board.move  config.move
move-contracts/bounty_board/tests/: bounty_board_tests.move
move-contracts/sentinel/: Move.toml  Published.toml
move-contracts/sentinel/sources/: config.move  smart_gate.move  threat_registry.move
move-contracts/sentinel/tests/: sentinel_tests.move
sentinel-backend/: Cargo.toml  Dockerfile  build.rs
sentinel-backend/migrations/: 001_init.sql  002_published_score.sql  002_world_metadata.sql  003_drop_published_score.sql  004_discord_alert_channels.sql  005_structure_cache.sql  006_nullable_profile_name.sql  007_recent_deaths.sql  008_event_compound_index.sql
sentinel-backend/src/: api.rs  config.rs  db.rs  demo.rs  discord.rs  google_rpc.rs  grpc.rs  historical.rs  lib.rs  main.rs  names.rs  publisher.rs  sui_client.rs  threat_engine.rs  types.rs  world_api.rs
sentinel-backend/tests/: db_integration.rs  graphql_integration_tests.rs  graphql_mock_tests.rs  grpc_integration_tests.rs  grpc_mock_tests.rs  logging.rs
ts-scripts/: package.json  test-resources.json  tsconfig.json
ts-scripts/bounty_board/: add-to-bounty.ts  authorize-extension.ts  cancel-bounty.ts  claim-bounty.ts  configure-rules.ts  create-board.ts  extension-ids.ts  modules.ts  post-bounty.ts  withdraw-contribution.ts
ts-scripts/helpers/: character.ts  gate.ts  storage-unit-extension.ts
ts-scripts/sentinel/: authorize-gate.ts  configure-gate.ts  create-registry.ts  extension-ids.ts  modules.ts
ts-scripts/utils/: config.ts  constants.ts  derive-object-id.ts  dev-inspect.ts  helper.ts  transaction.ts
wasmcloud-prototype/: .env.example  Cargo.toml  docker-compose.yaml  nats.conf  rust-analyzer.toml  sentinel.wadm.yaml
wasmcloud-prototype/components/api-handler/: Cargo.toml  wasmcloud.toml
wasmcloud-prototype/components/api-handler/.wash/: config.yaml
wasmcloud-prototype/components/api-handler/src/: lib.rs
wasmcloud-prototype/components/api-handler/wit/: world.wit
wasmcloud-prototype/components/demo-generator/: Cargo.toml  wasmcloud.toml
wasmcloud-prototype/components/demo-generator/.wash/: config.yaml
wasmcloud-prototype/components/demo-generator/src/: lib.rs
wasmcloud-prototype/components/demo-generator/wit/: world.wit
wasmcloud-prototype/components/name-resolver/: Cargo.toml  wasmcloud.toml
wasmcloud-prototype/components/name-resolver/.wash/: config.yaml
wasmcloud-prototype/components/name-resolver/src/: lib.rs
wasmcloud-prototype/components/name-resolver/wit/: world.wit
wasmcloud-prototype/components/publisher/: Cargo.toml  wasmcloud.toml
wasmcloud-prototype/components/publisher/.wash/: config.yaml
wasmcloud-prototype/components/publisher/src/: lib.rs
wasmcloud-prototype/components/publisher/wit/: world.wit
wasmcloud-prototype/components/threat-engine/: Cargo.toml  wasmcloud.toml
wasmcloud-prototype/components/threat-engine/.wash/: config.yaml
wasmcloud-prototype/components/threat-engine/src/: lib.rs
wasmcloud-prototype/components/threat-engine/wit/: world.wit
wasmcloud-prototype/components/world-api-client/: Cargo.toml  wasmcloud.toml
wasmcloud-prototype/components/world-api-client/.wash/: config.yaml
wasmcloud-prototype/components/world-api-client/src/: lib.rs
wasmcloud-prototype/components/world-api-client/wit/: world.wit
wasmcloud-prototype/servers/discord-bridge/: Cargo.toml  Dockerfile
wasmcloud-prototype/servers/discord-bridge/src/: main.rs
wasmcloud-prototype/servers/sse-bridge/: Cargo.toml  Dockerfile
wasmcloud-prototype/servers/sse-bridge/src/: main.rs
wasmcloud-prototype/servers/sui-bridge/: Cargo.toml  Dockerfile  build.rs
wasmcloud-prototype/servers/sui-bridge/src/: main.rs
wasmcloud-prototype/wit/: sentinel-ingestion.wit  sentinel-notifications.wit  sentinel-sse.wit
