[package]
name = "sentinel-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# HTTP client (for World REST API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# gRPC client (Sui checkpoint streaming)
tonic = { version = "0.13", features = ["transport", "channel", "tls-webpki-roots"] }
prost = "0.13"
prost-types = "0.14"

# Sui lightweight SDK (all from crates.io)
sui-sdk-types = { version = "0.3", features = ["serde", "hash"] }
sui-transaction-builder = { version = "0.3", features = ["intents"] }
sui-crypto = { version = "0.3", features = ["ed25519", "pem"] }
sui-rpc = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcs = "0.1"

# Async
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = "0.4"

# Random (demo mode)
rand = "0.9"

# Config
dotenvy = "0.15"

# Encoding
base64 = "0.22"
bech32 = "0.11"
hex = "0.4"
blake2b_simd = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "chrono"] }

# Discord bot
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }

[dev-dependencies]
tower = "0.5"
serial_test = "3"

[build-dependencies]
tonic-build = "0.13"
prost-build = "0.13"
