[workspace]
resolver = "2"
members = [
    "components/threat-engine",
    "components/api-handler",
    "components/publisher",
    "components/name-resolver",
    "components/world-api-client",
    "components/demo-generator",
    "servers/sui-bridge",
    "servers/discord-bridge",
    "servers/sse-bridge",
]

[profile.release]
opt-level = "s"
strip = true

[workspace.dependencies]
# Wasm component runtime
wit-bindgen = "0.36"
wasi = "0.14"

# wasmCloud interfaces
wasmcloud-component = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async (servers only — not usable in Wasm components)
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# NATS (servers only)
async-nats = "0.38"

# gRPC (sui-bridge only)
tonic = { version = "0.13", features = ["tls-webpki-roots", "transport"] }
prost = "0.13"
prost-types = "0.13"

# Discord (discord-bridge only)
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model"] }

# HTTP server (sse-bridge only)
axum = "0.8"

# Shared across servers
anyhow = "1"
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# Build dependencies (sui-bridge)
tonic-build = "0.13"
prost-build = "0.13"

# Test dependencies (sse-bridge)
tower = "0.5"
http = "1"
http-body-util = "0.1"
