[package]
name = "discord-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "discord-bridge"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
async-nats = { workspace = true }
serenity = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"
