[package]
name = "sui-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sui-bridge"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
async-nats = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }
